tests/sumo/extended/calibrator/errors/2flows_sameInterval/errors.sumo
Error: Overlapping or unsorted intervals in calibrator 'calibtest' (end=100.00, begin2=0.00).
Quitting (on error).
